--- a/styles/header.css
+++ b/styles/header.css
@@ -12,6 +12,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: var(--branco);
+    position: relative;
 }
 
 .container {
@@ -21,4 +22,28 @@
 
 .container__imagem {
     padding: 1em;
+}
+
+.lista-menu {  /*Menu hamburguer Alura/HTML e CSS:responsidade com mobile-first:Crando o Menu Hambúrguer*/
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+
+.container__botao:checked~.lista-menu {
+    display: block;
+}
+
+.lista-menu__titulo,
+.lista-menu__item {
+    padding: 1em;
+    background-color: var(--branco);
+}
+
+.lista-menu__titulo {
+    color: var(--laranja);
+}
+
+.lista-menu__link {
+    color: var();
 }
