--- a/styles/header.css
+++ b/styles/header.css
@@ -42,8 +42,14 @@
 
 .lista-menu__titulo {
     color: var(--laranja);
+    font-weight: 700;
 }
 
 .lista-menu__link {
-    color: var();
+    color: var(--azul);
+    text-transform: uppercase;
+}
+
+.container__botao {
+    display: none;
 }
