--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("./styles/header.css");
 @import url("./styles/banner.css");
+@import url("./styles/carrossel.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -7,6 +8,7 @@
     --laranja: #EB9800;
     --azul: rgba(0, 0, 255, 0.726);
     --fonte-principal: "Poppins";
+    --azul1: #002F52;
 }
 
 body {
