--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,14 +1,37 @@
 .banner {
-    background-color: rgba(0, 0, 255, 0.534);
+    background-color: rgba(2, 2, 110, 0.534);
     color: var(--branco);
     text-align: center;
+    padding: 2.5em 2em;
 }
 
-.banner_titulo {
+.banner__titulo {
     font-size: 18px;
     font-weight: 700;
+    margin-bottom: 1em;
 }
 
 .banner__texto {
     font-weight: 500;
+    padding: 1em 0;
+}
+
+.banner__pesquisa {
+    background-color: transparent;
+    border: 1px solid var(--branco);
+    color: var(--branco);
+    border-radius: 24px;
+    padding: 1em;
+    width: 100%;
+    margin-top: 1em;
+}
+
+.banner__pesquisa::placeholder {
+    font-family: var(--fonte-principal);
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    color: var(--branco);
+    background: url("../img/Lupa.svg") no-repeat;
+    background-position: 1em;
 }
