--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,5 @@
 .banner {
-    background-color: rgba(2, 2, 110, 0.534);
+    background: var(--azul-degrade);
     color: var(--branco);
     text-align: center;
     padding: 2.5em 2em;
@@ -8,12 +8,11 @@
 .banner__titulo {
     font-size: 18px;
     font-weight: 700;
-    margin-bottom: 1em;
 }
 
 .banner__texto {
     font-weight: 500;
-    padding: 1em 0;
+    margin: 1em 0;
 }
 
 .banner__pesquisa {
@@ -23,7 +22,6 @@
     border-radius: 24px;
     padding: 1em;
     width: 100%;
-    margin-top: 1em;
 }
 
 .banner__pesquisa::placeholder {
@@ -34,4 +32,32 @@
     color: var(--branco);
     background: url("../img/Lupa.svg") no-repeat;
     background-position: 1em;
+}
+
+@media screen and (min-width: 1024px) {
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner__pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .banner__pesquisa {
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 12em;
+    }
+
+    .banner {
+        padding: 6em 0;
+    }
 }
